updated version with loghtGBM model fully optimized, imbalance class treated, score with not trained-not test data and Kaggle Score

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,20 @@
-df_all.csv
 df_all_Encoded_and_NaN_proofed.csv
+df_all.csv
 df_outliers_processed.csv
+df_sample.csv
+df_train_test_NaN_proofed_Encoded.csv
+df_train_test_outliers_processed.csv
+df_train_test.csv
+df_valid_NaN_proofed_Encoded.csv
+df_valid_outliers_processed.csv
+df_valid_tt.csv
+lgbm_opti_df_valid.csv
+X.csv
+y.csv
+pipeline_home_loan_score.joblib
+df_train_test
+df_valid
+P7_Step7_20230219_LightGBM.ipynb
+P7_Step7_LightGBM_Backup.ipynb
 __pycache__
+mlflow_model
