submission for Defense

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,29 @@
+Backup_Best_P7_Step7_LightGBM.ipynb
+Backup_P7_Step1_Traitement_Kernel_Kaggle_Nettoyage.ipynb
+Backup_P7_Step2_Traitement_NaN_Encodage.ipynb
+Backup_P7_Step3a_Traitement_des_Outliers_df_train_test.ipynb
+Backup_P7_Step3b_Traitement_des_Outliers_df_valid.ipynb
+Backup_P7_Step4_Split_X_y_train_test_valid.ipynb
+Backup_P7_Step7_LightGBM.ipynb
 df_all_Encoded_and_NaN_proofed.csv
 df_all.csv
 df_outliers_processed.csv
-df_sample.csv
+df_train_test
 df_train_test_NaN_proofed_Encoded.csv
 df_train_test_outliers_processed.csv
 df_train_test.csv
+df_valid
 df_valid_NaN_proofed_Encoded.csv
 df_valid_outliers_processed.csv
+df_valid_tt_sample.csv
 df_valid_tt.csv
+lgbm_opti_class_weight_explainer_sample.pkl
 lgbm_opti_df_valid.csv
+mlflow_model
+Old_Backup_P7_Step7_20230219_LightGBM.ipynb
+Old_Backup_P7_Step7_LightGBM.ipynb
+shap_values_for_waterfall.pkl
+shap_values.pickle
 X.csv
 y.csv
 pipeline_home_loan_score.joblib
@@ -17,4 +32,3 @@ df_valid
 P7_Step7_20230219_LightGBM.ipynb
 P7_Step7_LightGBM_Backup.ipynb
 __pycache__
-mlflow_model
